whole city now avaliable!!

--- a/test.html
+++ b/test.html
@@ -31,7 +31,7 @@
 <style>
                     #float_image_eb9b1c5916dd0cc6d40dbd2046e4c237 {
                         position:absolute;
-                        top:0.5%;
+                        bottom:0.5%;
                         left:0.5%;
                         }
                 </style>
