--- a/homepage.html
+++ b/homepage.html
@@ -218,8 +218,8 @@
 </div>
 
  <h2>
-    The main goal is to access <br> sidewalk network level of <br>
-    <span style="background-color: #fffb0077; color: rgb(16, 0, 158);">ACCESSIBILITY</span>
+    The main goal is to access <br> sidewalk <em>network</em>  level of <br>
+    <span style="background-color: #00000077; color: rgb(255, 255, 255);"> - ACCESSIBILITY - </span>
 
  </h2>
 
