--- a/index.html
+++ b/index.html
@@ -217,6 +217,29 @@
 
 </div>
 
+<p> </p>
+
+<div class="media">
+
+
+    <a href="https://kauevestena.github.io/opensidewalkmap_beta/">
+        
+        <img title="OSWM Tagging Mistakes" 
+        src="assets/homepage/oswm_tagging_mistakes_img.png" 
+        alt="sample OSWM image" class="media__image responsive">
+    
+        <!-- THX: https://jsfiddle.net/Venugopal/e0u4sow1/1/ -->
+
+        <div class="media__body">
+
+            <h1>Tagging Mistakes</h1>
+
+        </div>
+
+    </a> 
+
+</div>
+
  <h2>
     The main goal is to access <br> sidewalk <em>network</em>  level of <br>
     <span style="background-color: #00000077; color: rgb(255, 255, 255);"> - ACCESSIBILITY - </span>
