statistics almost done!!

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 <div class="media">
 
 
-    <a href="https://kauevestena.github.io/opensidewalkmap_beta/">
+    <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/statistics.html">
         
         <img title="OSWM Statistics" 
         src="assets/homepage/oswm_statistics_img.png" 
