updating status, ok!

--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
 
 </h2>
 
+<h3> Its modules are: </h3>
 
 
 <!-- image 1: webmap  -->
@@ -261,11 +262,23 @@
 
 </div>
 
- <h2>
+
+
+<p> 
+    <span style="background-color: #797979d7; font-size: smaller;">
+
+        <a href="https://kauevestena.github.io/opensidewalkmap_beta/data/data_updating.html" style="color: rgb(243, 243, 172);">(You can check their updating status here)</a> 
+    </span>
+
+</p>
+
+
+
+<h2>
     The main goal is to access <br> sidewalk <em>network</em>  level of <br>
     <span style="background-color: #00000077; color: rgb(255, 255, 255);"> - ACCESSIBILITY - </span>
 
- </h2>
+</h2>
 
 
 <p>
