--- a/data/data_updating.html
+++ b/data/data_updating.html
@@ -35,7 +35,7 @@ tr:nth-child(even) {
 
 <table>
 
-<tr><th><b>Data Fetching</b></th><th>30/06/2022 12:51:41</th></tr><tr><th><b>Data Pre-Processing</b></th><th>30/06/2022 14:00:42</th></tr><tr><th><b>Webmap Generation</b></th><th>30/06/2022 15:37:26</th></tr>
+<tr><th><b>Data Fetching</b></th><th>04/07/2022 17:46:38</th></tr><tr><th><b>Data Pre-Processing</b></th><th>04/07/2022 20:05:07</th></tr><tr><th><b>Webmap Generation</b></th><th>05/07/2022 14:10:43</th></tr><tr><th><b>Statistics Charts</b></th><th>05/07/2022 10:44:00</th></tr><tr><th><b>Statistical Charts</b></th><th>05/07/2022 13:12:26</th></tr>
 
 </table>
 
