link to routing and presentation

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
 
 
-        <img title="OpenSidewalkMap" src="assets/homepage/project_logo.png" alt="OSWM Logo"
+        <img title="OSWM Logo" src="assets/homepage/project_logo.png" alt="OSWM Logo"
         style="vertical-align:middle" class="responsive">
 
         
@@ -186,6 +186,8 @@
 
             <h1>Webmap</h1>
 
+            <!-- <h3>Cartographic Representation of Data</h3> -->
+
         </div>
 
     </a> 
@@ -197,7 +199,7 @@
 <div class="media">
 
 
-    <a href="https://kauevestena.github.io/opensidewalkmap_beta/">
+    <a href="https://kauevestena-opensidewalkmap-beta-streamlit-routing-app-52bins.streamlitapp.com/">
         
         <img title="OSWM Routing" 
         src="assets/homepage/oswm_route_img.png" 
