lang tag in webmap, replace func

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<!-- thx, w3schools, made following its tutorial!! -->
+<!-- thx, w3schools, this page was made following their tutorial!! -->
 
 <html lang="en">
 <head>
