legends are born!! part 2

--- a/tests/tests.html
+++ b/tests/tests.html
@@ -28,6 +28,7 @@
         display: none;
         z-index: 101;
 
+
     }
 
     .sw-leg-sur:hover .hover_base_sur {
@@ -36,6 +37,8 @@
         z-index: 101;
         transform: scale(1.1,1.1);
         background-color: white;
+
+
 
     }
 
@@ -82,6 +85,10 @@
         transform: scale(1.1,1.1);
         background-color: white;
 
+        position: absolute;
+        top: 0;
+        left: 0;
+
 
     }
 
@@ -106,6 +113,8 @@
         background-color: white;
 
 
+
+
     }
 
 
@@ -120,9 +129,10 @@
     <div class="big_div">
 
     <div class="kerbs-leg">
-        <img src="../assets/kerbs_leg.png" alt="kerbs_leg"></img>
+        <img src="../assets/kerbs_leg.png" alt="kerbs_leg" title="test_hover 02"></img>
 
-            <img src="../assets/kerbs_leg.png" alt="sw_surface_leg_hover" class="kerbs-leg hover_base_kb"></img>
+            <img src="../assets/kerbs_leg.png" alt="sw_surface_leg_hover" class="kerbs-leg hover_base_kb" title="Kerbs Map Symbols (click)"></img>
+
 
 
 
@@ -131,7 +141,7 @@
     <div class="crossings-leg">
         <img src="../assets/crossings_leg.png" alt="crossings_leg"></img>
 
-            <img src="../assets/crossings_leg.png" alt="sw_surface_leg_hover" class="crossings-leg hover_base_cr"></img>
+            <img src="../assets/crossings_leg.png" alt="sw_surface_leg_hover" class="crossings-leg hover_base_cr" title="Crossings Map Symbols (click)"></img>
 
 
 
@@ -142,7 +152,7 @@
 
         <img src="../assets/sw_leg_smoothness.png" alt="sw_leg_smoothness"></img>
 
-            <img src="../assets/sw_leg_smoothness.png" alt="sw_surface_leg_hover" class="sw-leg-smo hover_base_smo"></img>
+            <img src="../assets/sw_leg_smoothness.png" alt="sw_surface_leg_hover" class="sw-leg-smo hover_base_smo" title="Sidewalk Smoothness Map Symbols (click)"></img>
 
     </div>
 
@@ -150,7 +160,7 @@
 
         <img src="../assets/sw_leg_surface.png" alt="sw_surface_leg" ></img>
 
-            <img src="../assets/sw_leg_surface.png" alt="sw_surface_leg_hover" class="sw-leg-sur hover_base_sur"></img>
+            <img src="../assets/sw_leg_surface.png" alt="sw_surface_leg_hover" class="sw-leg-sur hover_base_sur" title="Sidewalk Surface Map Symbols (click)"></img>
 
     </div>
 
