LEGENDS R BORN,SEASON FINALE: THEY'RE FUNCTIONAL!!

--- a/tests/tests_map_legend.html
+++ b/tests/tests_map_legend.html
@@ -170,7 +170,7 @@
 
 </head>
 
-<body>
+<body body style="background-color:powderblue;">
 
     <!-- the 4 side images: -->
     <div class="leg_div">
