upd smo color scheme , data dowload option added

--- a/data/data_updating.html
+++ b/data/data_updating.html
@@ -31,13 +31,45 @@ tr:nth-child(even) {
 </head>
 <body>
 
-<h1>OSWM Updating Info</h1>
+<h1><a href="https://kauevestena.github.io/opensidewalkmap_beta">OSWM</a> Updating Info</h1>
 
 <table>
 
-<tr><th><b>Data Fetching</b></th><th>11/07/2022 16:21:52</th></tr><tr><th><b>Data Pre-Processing</b></th><th>11/07/2022 15:15:40</th></tr><tr><th><b>Webmap Generation</b></th><th>13/07/2022 17:09:46</th></tr><tr><th><b>Statistics Charts</b></th><th>05/07/2022 10:44:00</th></tr><tr><th><b>Statistical Charts</b></th><th>05/07/2022 13:12:26</th></tr>
+<tr><th><b>Data Fetching</b></th><th>11/07/2022 16:21:52</th></tr><tr><th><b>Data Pre-Processing</b></th><th>11/07/2022 15:15:40</th></tr><tr><th><b>Webmap Generation</b></th><th>14/07/2022 09:37:53</th></tr><tr><th><b>Statistics Charts</b></th><th>05/07/2022 10:44:00</th></tr><tr><th><b>Statistical Charts</b></th><th>05/07/2022 13:12:26</th></tr>
 
 </table>
+
+
+<h1>Download Data:</h1>
+
+<table>
+
+<tr>
+  <th>Sidewalks</th>
+  <th><a href="https://kauevestena.github.io/opensidewalkmap_beta/data/sidewalks_raw.geojson">Raw</a></th>
+  <th><a href="https://kauevestena.github.io/opensidewalkmap_beta/data/sidewalks.geojson">Filtered</a></th>
+  <th><a href="https://kauevestena.github.io/opensidewalkmap_beta/data/sidewalks_versioning.json">Versioning</a></th>
+</tr>
+
+<tr>
+  <th>Crossings</th>
+  <th><a href="https://kauevestena.github.io/opensidewalkmap_beta/data/crossings_raw.geojson">Raw</a></th>
+  <th><a href="https://kauevestena.github.io/opensidewalkmap_beta/data/crossings.geojson">Filtered</a></th>
+  <th><a href="https://kauevestena.github.io/opensidewalkmap_beta/data/crossings_versioning.json">Versioning</a></th>
+</tr>
+
+<tr>
+  <th>Kerbs</th>
+  <th><a href="https://kauevestena.github.io/opensidewalkmap_beta/data/kerbs_raw.geojson">Raw</a></th>
+  <th><a href="https://kauevestena.github.io/opensidewalkmap_beta/data/kerbs.geojson">Filtered</a></th>
+  <th><a href="https://kauevestena.github.io/opensidewalkmap_beta/data/kerbs_versioning.json">Versioning</a></th>
+</tr>
+
+
+
+</table>
+
+
 
 </body>
 </html>    
