--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 <p> 
     <span style="background-color: #797979d7; font-size: smaller;">
 
-        <a href="https://kauevestena.github.io/opensidewalkmap_beta/data/data_updating.html" style="color: rgb(243, 243, 172);">(You can check their updating status here)</a> 
+        <a href="https://kauevestena.github.io/opensidewalkmap_beta/data/data_updating.html" style="color: rgb(243, 243, 172);">(You can check their updating status and download data here)</a> 
     </span>
 
 </p>
