--- a/data/data_updating.html
+++ b/data/data_updating.html
@@ -35,7 +35,7 @@ tr:nth-child(even) {
 
 <table>
 
-<tr><th><b>Data Fetching</b></th><th>11/07/2022 16:21:52</th></tr><tr><th><b>Data Pre-Processing</b></th><th>11/07/2022 15:15:40</th></tr><tr><th><b>Webmap Generation</b></th><th>14/07/2022 09:37:53</th></tr><tr><th><b>Statistics Charts</b></th><th>05/07/2022 10:44:00</th></tr><tr><th><b>Statistical Charts</b></th><th>05/07/2022 13:12:26</th></tr>
+<tr><th><b>Data Fetching</b></th><th>11/07/2022 16:21:52</th></tr><tr><th><b>Data Pre-Processing</b></th><th>11/07/2022 15:15:40</th></tr><tr><th><b>Webmap Generation</b></th><th>14/07/2022 09:37:53</th></tr><tr><th><b>Statistics Charts</b></th><th>05/07/2022 10:44:00</th></tr><tr><th><b>Statistical Charts</b></th><th>05/07/2022 13:12:26</th></tr><tr><th><b>Wiki check for keys</b></th><th>14/07/2022 15:14:22</th></tr>
 
 </table>
 
