qc csv links, countpages updated...

--- a/quality_check/pages/keys_without_wiki_kerbs.html
+++ b/quality_check/pages/keys_without_wiki_kerbs.html
@@ -22,7 +22,7 @@
 
 
 
-        <title>OSWM QC c invalid_characters</title>
+        <title>OSWM QC k keys_without_wiki</title>
 
         
 
@@ -54,13 +54,13 @@ tr:nth-child(even) {
         </head>
         <body>
 
-        <h1><a href="https://kauevestena.github.io/opensidewalkmap_beta">OSWM</a> Quality Check: crossings invalid_characters</h1>
+        <h1><a href="https://kauevestena.github.io/opensidewalkmap_beta">OSWM</a> Quality Check: kerbs keys_without_wiki</h1>
 
-        <h2>About: characters that should not be in the value or in the key</h2>
-        <h2>Type: tags</h2>
+        <h2>About: Keys that may be wrong, because there's no wiki article for it</h2>
+        <h2>Type: keys</h2>
         <h2>  
         
-            <a href="https://kauevestena.github.io/opensidewalkmap_beta/quality_check/tables/invalid_characters_crossings.csv"> You can also download the raw .csv table </a>
+            <a href="https://kauevestena.github.io/opensidewalkmap_beta/quality_check/tables/keys_without_wiki_kerbs.csv"> You can also download the raw .csv table </a>
 
         </h2>
 
