--- a/quality_check/pages/keys_without_wiki_sidewalks.html
+++ b/quality_check/pages/keys_without_wiki_sidewalks.html
@@ -22,7 +22,7 @@
 
 
 
-        <title>OSWM QC c invalid_characters</title>
+        <title>OSWM QC s keys_without_wiki</title>
 
         
 
@@ -54,13 +54,13 @@ tr:nth-child(even) {
         </head>
         <body>
 
-        <h1><a href="https://kauevestena.github.io/opensidewalkmap_beta">OSWM</a> Quality Check: crossings invalid_characters</h1>
+        <h1><a href="https://kauevestena.github.io/opensidewalkmap_beta">OSWM</a> Quality Check: sidewalks keys_without_wiki</h1>
 
-        <h2>About: characters that should not be in the value or in the key</h2>
-        <h2>Type: tags</h2>
+        <h2>About: Keys that may be wrong, because there's no wiki article for it</h2>
+        <h2>Type: keys</h2>
         <h2>  
         
-            <a href="https://kauevestena.github.io/opensidewalkmap_beta/quality_check/tables/invalid_characters_crossings.csv"> You can also download the raw .csv table </a>
+            <a href="https://kauevestena.github.io/opensidewalkmap_beta/quality_check/tables/keys_without_wiki_sidewalks.csv"> You can also download the raw .csv table </a>
 
         </h2>
 
@@ -74,7 +74,9 @@ tr:nth-child(even) {
     <th><b>key</b></th>
     <th><b>value</b></th>
     <th><b>commentary</b></th>'
-    </tr>
+    </tr><tr><td><a href=https://www.openstreetmap.org/way/1070407718>1070407718</a></td><td>paving_stones</td><td>good</td><td>no wiki page for this key</td></tr>
+<tr><td><a href=https://www.openstreetmap.org/way/1070407721>1070407721</a></td><td>paving_stones</td><td>good</td><td>no wiki page for this key</td></tr>
+
 
         </table>
 
